@@ -2,11 +2,8 @@
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
-DEB_HOST_GNU_SYSTEM=$(shell dpkg-architecture -qDEB_HOST_GNU_SYSTEM)
-DEB_HOST_GNU_CPU=$(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
-SVN_RELEASE=$(shell grep '^release=' configure | cut -d'=' -f2-)
-ARCH_PATH=$(DEB_HOST_GNU_SYSTEM)-$(DEB_HOST_GNU_CPU)-$(SVN_RELEASE)
-MULTIARCH := $(shell dpkg-architecture -qDEB_TARGET_MULTIARCH)
+RELEASE=$(shell grep '^release=' configure | cut -d'=' -f2-)
+ARCH_PATH=$(DEB_HOST_GNU_SYSTEM)-$(DEB_HOST_GNU_CPU)-$(RELEASE)
 
 %:
 	dh $@
@@ -17,8 +14,8 @@ override_dh_auto_configure:
 	--disable-silent-rules
 
 override_dh_lintian:
-	sed -e "s/ARCH_PATH/$(ARCH_PATH)/" \
-		-e "s/MULTIARCH/$(MULTIARCH)/" \
+	sed -e "s/MULTIARCH/$(DEB_TARGET_MULTIARCH)/" \
+		-e "s/ARCH_PATH/$(ARCH_PATH)/" \
 		debian/enlightenment.lintian-overrides.in > debian/enlightenment.lintian-overrides
 	dh_lintian
 
