@@ -2,6 +2,7 @@ e17 (0.22.0-2) UNRELEASED; urgency=medium
 
   * Team upload.
   * Fix debhelper 10 (previous version was missing a commit)
+  * d/rules: simplify lintian-overrides path generation
 
  -- Ross Vandegrift <ross@stgulik>  Wed, 08 Nov 2017 18:45:01 -0800
 
